[gd_scene load_steps=22 format=3 uid="uid://doot5qkixaaut"]

[ext_resource type="Script" uid="uid://cye72mkppe1dp" path="res://worlds/perodic_warfare/1/hydrogen_001.gd" id="2_bx5fg"]
[ext_resource type="PackedScene" uid="uid://cvmgepfdpxjh4" path="res://arts/3D/models/polyhaven.com/wooden_bucket_02_2k.gltf/wooden_bucket_02_2k.gltf" id="3_70sc5"]
[ext_resource type="PackedScene" uid="uid://d3hec6j3t12f4" path="res://arts/3D/models/polyhaven.com/rubber_duck_toy_2k.gltf/rubber_duck_toy_2k.gltf" id="6_yliqe"]
[ext_resource type="Resource" uid="uid://coytvu23vh8w6" path="res://objects/matters/H_2O.tres" id="7_neim0"]
[ext_resource type="Shader" uid="uid://bnd4ag4cyhfyw" path="res://materials/WATER.gdshader" id="8_6362b"]
[ext_resource type="PackedScene" uid="uid://cu0r8a4gefs2g" path="res://objects/interactives/power_box.tscn" id="10_me822"]
[ext_resource type="PackedScene" uid="uid://bc6lyerwwwkg2" path="res://arts/3D/models/itch.io/IndustrialPack2/CautionSign_WetFloor/Caution_Sign.fbx" id="11_70sc5"]
[ext_resource type="PackedScene" uid="uid://dp4dqyc15xaat" path="res://arts/3D/models/quaternius.com/Modular SciFi MegaKit[Standard]/glTF/Props/Prop_Cable_3.gltf" id="13_d2856"]
[ext_resource type="PackedScene" uid="uid://c5uql3qxkelo2" path="res://objects/items/equipments/collector/cup.tscn" id="13_n5ifu"]
[ext_resource type="PackedScene" uid="uid://lif88rujhcpl" path="res://creatures/neutrals/portrait.tscn" id="26_tonv6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_662c5"]
top_radius = 0.28
bottom_radius = 0.0
height = 1.5

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vxryk"]
frequency = 0.0922

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8s5s1"]
noise = SubResource("FastNoiseLite_vxryk")
seamless = true
as_normal_map = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uvhhg"]
seamless = true
as_normal_map = true
bump_strength = 1.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wo4ms"]
render_priority = 0
shader = ExtResource("8_6362b")
shader_parameter/uAlbedo = Color(0, 0, 0.235294, 1)
shader_parameter/uTexureNormal = SubResource("NoiseTexture2D_8s5s1")
shader_parameter/uTexureNormal2 = SubResource("NoiseTexture2D_uvhhg")
shader_parameter/uNormalMix = 0.2
shader_parameter/uWaveDirection = Vector2(1, 0)
shader_parameter/uWaveDirection2 = Vector2(0, 1)
shader_parameter/uTimeScale = 0.057
shader_parameter/uWaveScale = 1.6

[sub_resource type="BoxShape3D" id="BoxShape3D_g7s13"]
size = Vector3(7.05273, 2.60254, 4.2793)

[sub_resource type="Curve" id="Curve_n4me4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.330508, 0.559933), 0.0, 0.0, 0, 0, Vector2(0.983051, 0.711432), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_i6mqr"]
curve = SubResource("Curve_n4me4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5cao2"]
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 2.0
initial_velocity_max = 3.5
scale_curve = SubResource("CurveTexture_i6mqr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iw8sv"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.631373, 0.631373, 0.631373, 0.294118)

[sub_resource type="SphereMesh" id="SphereMesh_2b4kj"]
material = SubResource("StandardMaterial3D_iw8sv")
radius = 0.05
height = 0.1
radial_segments = 6

[node name="Hydrogen001" type="Node3D"]
script = ExtResource("2_bx5fg")
content = "Water is made of Hydrogen and Oxygen"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WoodenBucket" parent="." instance=ExtResource("3_70sc5")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -2.2074184, 0, -3)
matter = ExtResource("7_neim0")

[node name="Water" type="MeshInstance3D" parent="WoodenBucket"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CylinderMesh_662c5")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_wo4ms")

[node name="RubberDuck" parent="WoodenBucket" instance=ExtResource("6_yliqe")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.056315184, 0.216757, -0.19816494)

[node name="PowerBox" parent="." instance=ExtResource("10_me822")]
transform = Transform3D(7.22128e-08, -0.206341, 0.97848, 1.55783e-08, 0.97848, 0.206341, -1, 3.42601e-10, 7.38732e-08, -6.197, 2, -2.36561)

[node name="Cup" parent="." instance=ExtResource("13_n5ifu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4764962, 0.941295, -5.5079613)
liquid_material = SubResource("ShaderMaterial_wo4ms")

[node name="PlayerInterestArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerInterestArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86354, 1.29443, -2.45619)
shape = SubResource("BoxShape3D_g7s13")

[node name="Portrait" parent="." instance=ExtResource("26_tonv6")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4, 1.24337, -4)

[node name="Caution_Sign" parent="." instance=ExtResource("11_70sc5")]
transform = Transform3D(1.0000004, 0, -1.7320507, 0, 2, 0, 1.7320507, 0, 1.0000004, -1, 0.4315086, -1)

[node name="PropCable3" parent="." instance=ExtResource("13_d2856")]
transform = Transform3D(-0.1058649, 0, 0.99438053, 0, 1, 0, -0.99438053, 0, -0.1058649, -4.7171583, 0.0643563, -2)

[node name="HydrogenGas" type="GPUParticles3D" parent="PropCable3"]
transform = Transform3D(-0.105865, 0, -0.99438053, 0, 1, 0, 0.99438053, 0, -0.105865, 0.8587334, -0.0643563, 2.4029613)
visible = false
amount = 5
lifetime = 0.4
randomness = 1.0
fixed_fps = 10
process_material = SubResource("ParticleProcessMaterial_5cao2")
draw_pass_1 = SubResource("SphereMesh_2b4kj")

[node name="OxygenGas" type="GPUParticles3D" parent="PropCable3"]
transform = Transform3D(-0.105865, 0, -0.9943815, 0, 1, 0, 0.9943815, 0, -0.105865, 0.6682687, -0.0643563, 2.9454513)
visible = false
amount = 2
lifetime = 0.4
randomness = 1.0
fixed_fps = 10
process_material = SubResource("ParticleProcessMaterial_5cao2")
draw_pass_1 = SubResource("SphereMesh_2b4kj")

[connection signal="body_entered" from="PlayerInterestArea3D" to="." method="_on_player_interest_area_3d_body_entered"]
[connection signal="body_exited" from="PlayerInterestArea3D" to="." method="_on_player_interest_area_3d_body_exited"]
